--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 	<p><a href="demos/chap2-demo-2.html">2-b</a></p>
 	<p><a href="demos/chap2-demo-3.html">2-c</a></p>
 	<p><a href="demos/chap2-demo-4.html">2-d</a></p>
-	
+	  <p>这里是实验二</p>
+	<p><a href="demos/chap3-demo-3.html">2-a</a></p>
+	<p><a href="demos/chap3-demo-4.html">2-b</a></p>
+	<p><a href="demos/chap3-demo-5.html">2-c</a></p>
+	<p><a href="demos/zz.html">2-d</a></p>
     
     
   </body>
