--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<p><a href="demos/chap3-demo-3.html">3-a</a></p>
 	<p><a href="demos/chap3-demo-4.html">3-b</a></p>
 	<p><a href="demos/chap3-demo-5.html">3-c</a></p>
-	<p><a href="demos/zz.html">2-d</a>3-d</p>
+	<p><a href="demos/zz.html">3-d</a></p>
     
     
   </body>
