--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 	<p><a href="demos/chap3-demo-4.html">3-b</a></p>
 	<p><a href="demos/chap3-demo-5.html">3-c</a></p>
 	<p><a href="demos/zz.html">3-d</a></p>
-    
+    	 <p>这里是实验四</p>
+	<p><a href="demos/chap4-demo-1.html">4-a</a></p>
+	<p><a href="demos/chap4-demo-2.html">4-b</a></p>
+	<p><a href="demos/chap4-demo-3.html">4-c</a></p>
+	<p><a href="demos/chap4-demo-4.html">4-d</a></p>
     
   </body>
 </html>
